Implement homepage recipe summaries filtering functionality